# practice2/docs/swagger.json
@@ -94,6 +94,33 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "책의 정보를 삭제하는 API입니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "books"
+                ],
+                "summary": "책 삭제",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "book id",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
             }
         },
         "/ping": {
