# practice2/internal/app/router/router.go
@@ -32,6 +32,7 @@ func createRoutes(r *gin.Engine) {
 	v1.POST("/books", bookController.CreateBook)
 	v1.GET("/books", bookController.GetBooks)
 	v1.GET("/books/:uid", bookController.GetBook)
+	v1.DELETE("/books/:uid", bookController.DeleteBook)
 
 	v1.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
